--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.12.0",
+    "@types/d3": "^7.1.0",
+    "chart.js": "^3.7.1",
+    "d3": "^7.4.4",
     "next": "12.1.5",
+    "next-auth": "^4.3.2",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
